WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
266718
[UnifedPDF] Can't click-drag on scrollbars
https://bugs.webkit.org/show_bug.cgi?id=266718
Summary
[UnifedPDF] Can't click-drag on scrollbars
Simon Fraser (smfr)
Reported
2023-12-20 11:16:33 PST
Scrollbars need to be draggable if you click them with the mouse; that’s not the case without some work.
Attachments
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2023-12-20 11:16:44 PST
<
rdar://119874627
>
Simon Fraser (smfr)
Comment 2
2023-12-20 11:24:56 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22125
EWS
Comment 3
2023-12-20 14:57:52 PST
Committed
272385@main
(91d66cef2909): <
https://commits.webkit.org/272385@main
> Reviewed commits have been landed. Closing PR #22125 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug