[UnifedPDF] Can't click-drag on scrollbars https://bugs.webkit.org/show_bug.cgi?id=266718 rdar://119874627

Reviewed by Tim Horton.

In order to get click-dragging of UnifedPDF scrollbars to work, we need:
1. Tracking of m_lastMousePositionInPluginCoordinates, so move that down to PDFPluginBase
2. A RemoteScrollbarsController, so override createScrollbarsController() to call through
   to the ChromeClient.

* Source/WebCore/platform/ScrollableArea.h:
* Source/WebKit/WebProcess/Plugins/PDF/PDFPlugin.h:
* Source/WebKit/WebProcess/Plugins/PDF/PDFPluginBase.h:
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.h:
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::createScrollbarsController):
(WebKit::UnifiedPDFPlugin::handleMouseEvent):

Canonical link: https://commits.webkit.org/272385@main